# django-crud-observability

./: .gitignore  README.md
app/: .dockerignore  .env  Dockerfile  docker-compose.yml  makefile  pyproject.toml
app/employee_project/: settings.py  urls.py
app/employee_register/: models.py
app/utils/: db_init.sh  positions.json  requirements.txt
app/utils/grafana/: build-dashboard.jsonnet  grafana.json  panels.libsonnet
app/utils/prometheus/: prometheus.yml
