[tool.poetry]
name = "app"
version = "0.1.0"
description = "Django CRUD + observability (GAP)"
authors = ["Andrei Horbach <a.horbach@studionx.ru>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0.1"
django-crispy-forms = "1.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
